--- a/str_mj.html
+++ b/str_mj.html
@@ -78,7 +78,9 @@ table.strategies td { padding: 5px 3px 5px 0; text-align: right; white-space:now
 <div id="center">
    <div class="title">
       <h1>Quantia Report</h1>
-      <h3>STR_MJ</h3>
+		<span class="source">
+			Source: GeneralCsv
+		</span>
    </div>
 
 	   <div class="params">
@@ -112,11 +114,11 @@ table.strategies td { padding: 5px 3px 5px 0; text-align: right; white-space:now
          </div>
 		 <div class="plH2">
             <div class="name2">Yrly Avg % ret</div>
-            <div class="positiveNum value2">338.1 %</div>
+            <div class="positiveNum value2">67.62 %</div>
          </div>
 		 <div class="plH2">
             <div class="name2">CAGR</div>
-            <div class="positiveNum value2">56.35 %</div>
+            <div class="positiveNum value2">11.27 %</div>
          </div>
       </div>
 
@@ -127,7 +129,7 @@ table.strategies td { padding: 5px 3px 5px 0; text-align: right; white-space:now
          </div>
          <div class="sumH2">
             <div class="name">Sharpe ratio</div>
-            <div class="value">0.22</div>
+            <div class="value">0.19</div>
          </div>
          <div class="sumH2">
             <div class="name">Profit factor</div>
@@ -148,7 +150,7 @@ table.strategies td { padding: 5px 3px 5px 0; text-align: right; white-space:now
          </div>
          <div class="sumH2">
             <div class="name">% Drawdown</div>
-            <div class="value">25.02 %</div>
+            <div class="value">7.06 %</div>
          </div>
          <div class="sumH2">
             <div class="name">Daily Avg profit</div>
@@ -167,7 +169,7 @@ table.strategies td { padding: 5px 3px 5px 0; text-align: right; white-space:now
          </div>
 		 <div class="sumH2">
             <div class="name">Annual% / Max DD%</div>
-            <div class="value">2.25</div>
+            <div class="value">1.6</div>
          </div>
 		 <div class="sumH2">
             <div class="name">R Expectancy</div>
@@ -245,7 +247,7 @@ table.strategies td { padding: 5px 3px 5px 0; text-align: right; white-space:now
          <td class="key">Average # of Bars in Trade</td><td class="val">0</td>
       </tr>
 		<tr>
-         <td class="key">AHPR</td><td class="val">1.19</td>
+         <td class="key">AHPR</td><td class="val">0.26</td>
          <td class="key">Z-Score</td><td class="val">-1.71</td>
          <td class="key">Z-Probability</td><td class="val">95.64 %</td>
       </tr>
